# zettelkast

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  release.nix  restyle.sh  zettel.dot  zettelkast.cabal
.github/workflows/: test.yml
app/: Main.hs
src/Data/: Path.hs  Zettel.hs  ZettelGraph.hs  ZettelID.hs  ZettelMeta.hs  ZettelPath.hs
